@@ -76,34 +76,56 @@ m4_define([MIN_CRYPTO_VERSION], [m4_ifval([$1], [$1], [5.1])])dnl
 	CRYPTOPP_INCLUDE_PREFIX="unknown"
 	cryptopp_libdir="unknown"
 
-	for CRYPTOPP_PREFIX in "$with_crypto_prefix" /usr /usr/local /opt /opt/local /usr/pkg /mingw ; do
-		AS_IF([test -z "$CRYPTOPP_PREFIX"], [continue])
-
-		# Find the Cryptopp header
-		MULE_IF([test -f $CRYPTOPP_PREFIX/$cryptopp_file_with_version], [
+	AS_IF([test -n "$with_crypto_prefix"], [
+		# Find the Cryptopp header in the user-provided location
+		MULE_IF([test -f $with_crypto_prefix/$cryptopp_file_with_version], [
 			CRYPTOPP_STYLE="sources"
 			CRYPTOPP_LIB_NAME="cryptopp"
 			cryptopp_includedir=
-			CRYPTOPP_INCLUDE_PREFIX="$CRYPTOPP_PREFIX"
+			CRYPTOPP_INCLUDE_PREFIX="$with_crypto_prefix"
 			cryptopp_libdir=
-			break
-		], [test -f $CRYPTOPP_PREFIX/include/cryptopp/$cryptopp_file_with_version], [
+		], [test -f $with_crypto_prefix/include/cryptopp/$cryptopp_file_with_version], [
 			CRYPTOPP_STYLE="installed"
 			CRYPTOPP_LIB_NAME="cryptopp"
-			cryptopp_includedir="$CRYPTOPP_PREFIX/include"
+			cryptopp_includedir="$with_crypto_prefix/include"
 			CRYPTOPP_INCLUDE_PREFIX="$CRYPTOPP_LIB_NAME"
-			cryptopp_libdir="$CRYPTOPP_PREFIX/lib"
-			break
-		], [test -f $CRYPTOPP_PREFIX/include/crypto++/$cryptopp_file_with_version], [
+			cryptopp_libdir="$with_crypto_prefix/lib"
+		], [test -f $with_crypto_prefix/include/crypto++/$cryptopp_file_with_version], [
 			# Debian uses libcrypto++5.1 - it's not my fault, please soda patch the package
 			CRYPTOPP_STYLE="gentoo_debian"
 			CRYPTOPP_LIB_NAME="crypto++"
-			cryptopp_includedir="$CRYPTOPP_PREFIX/include"
+			cryptopp_includedir="$with_crypto_prefix/include"
 			CRYPTOPP_INCLUDE_PREFIX="$CRYPTOPP_LIB_NAME"
-			cryptopp_libdir="$CRYPTOPP_PREFIX/lib"
-			break
+			cryptopp_libdir="$with_crypto_prefix/lib"
 		])
-	done
+	], [
+		for CRYPTOPP_PREFIX in /usr /usr/local /opt /opt/local /usr/pkg /mingw ; do
+			# Find the Cryptopp header in system locations
+			MULE_IF([test -f $CRYPTOPP_PREFIX/$cryptopp_file_with_version], [
+				CRYPTOPP_STYLE="sources"
+				CRYPTOPP_LIB_NAME="cryptopp"
+				cryptopp_includedir=
+				CRYPTOPP_INCLUDE_PREFIX="$CRYPTOPP_PREFIX"
+				cryptopp_libdir=
+				break
+			], [test -f $CRYPTOPP_PREFIX/include/cryptopp/$cryptopp_file_with_version], [
+				CRYPTOPP_STYLE="installed"
+				CRYPTOPP_LIB_NAME="cryptopp"
+				cryptopp_includedir="$CRYPTOPP_PREFIX/include"
+				CRYPTOPP_INCLUDE_PREFIX="$CRYPTOPP_LIB_NAME"
+				cryptopp_libdir="$CRYPTOPP_PREFIX/lib"
+				break
+			], [test -f $CRYPTOPP_PREFIX/include/crypto++/$cryptopp_file_with_version], [
+				# Debian uses libcrypto++5.1 - it's not my fault, please soda patch the package
+				CRYPTOPP_STYLE="gentoo_debian"
+				CRYPTOPP_LIB_NAME="crypto++"
+				cryptopp_includedir="$CRYPTOPP_PREFIX/include"
+				CRYPTOPP_INCLUDE_PREFIX="$CRYPTOPP_LIB_NAME"
+				cryptopp_libdir="$CRYPTOPP_PREFIX/lib"
+				break
+			])
+		done
+	])
 
 	AS_IF([test $CRYPTOPP_STYLE = "unknown"], [result=no; resultstr=""], [
 		# Find out the crypto++ version and check against the minimum required
